--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-biscuit - modular HTTP cookie parser
+biscuit - Modular HTTP cookie parser
 Copyright (C) 2012 Andrea Cardaci <cyrus.and@gmail.com>
 --------------------------------------------------------------------------------
 
